--- a/src/Views/ExecuteCustomAction.axaml
+++ b/src/Views/ExecuteCustomAction.axaml
@@ -106,6 +106,28 @@
             </TextBox>
           </Grid>
         </DataTemplate>
+
+        <DataTemplate DataType="vm:CustomActionControlComboBox">
+          <Grid RowDefinitions="32,Auto" ColumnDefinitions="150,*">
+            <TextBlock Grid.Row="0" Grid.Column="0"
+                       Text="{Binding Label}"
+                       HorizontalAlignment="Right" VerticalAlignment="Center"
+                       Margin="0,0,8,0"/>
+            <ComboBox Grid.Row="0" Grid.Column="1"
+                      Height="28" Padding="8,0"
+                      VerticalAlignment="Center" HorizontalAlignment="Stretch"
+                      ItemsSource="{Binding Options}"
+                      SelectedItem="{Binding Value, Mode=TwoWay}"/>
+
+            <TextBlock Grid.Row="1" Grid.Column="1"
+                       Classes="small"
+                       Margin="0,2"
+                       TextWrapping="Wrap"
+                       Text="{Binding Description}"
+                       Foreground="{DynamicResource Brush.FG2}"
+                       IsVisible="{Binding Description, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
+          </Grid>
+        </DataTemplate>
       </ItemsControl.DataTemplates>
     </ItemsControl>
   </StackPanel>
