ux: grid lines brush for DataGrid
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -47,6 +47,10 @@
                 ContextRequested="OnCommitListContextRequested"
                 DoubleTapped="OnCommitListDoubleTapped"
                 KeyDown="OnCommitListKeyDown">
+        <DataGrid.Resources>
+          <SolidColorBrush x:Key="DataGridGridLinesBrush" Color="{DynamicResource Color.Border0}" />
+        </DataGrid.Resources>
+        
         <DataGrid.Styles>
           <Style Selector="DataGridColumnHeader">
             <Setter Property="MinHeight" Value="24"/>
