--- a/src/Views/BranchCompare.axaml
+++ b/src/Views/BranchCompare.axaml
@@ -11,8 +11,7 @@
                     x:Name="ThisControl"
                     Icon="/App.ico"
                     Title="{DynamicResource Text.BranchCompare}"
-                    MinWidth="1280" MinHeight="720"
-                    WindowStartupLocation="CenterOwner">
+                    MinWidth="1280" MinHeight="720">
   <Grid RowDefinitions="Auto,64,*">
     <!-- TitleBar -->
     <Grid Grid.Row="0" Height="28" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
